GNOME Bugzilla – Bug 783027
aacparse: fix negotiation error when reusing element
Last modified: 2017-06-02 10:57:32 UTC
If we reuse the audio parser [aacparse] in the pipeline [Reusing: By setting pipeline to NULL and again set to playing] Eg: Try to play file "test.aac" and play the same file by reusing the pipeline. Getting below error: baseparse gstbaseparse.c:2596:gst_base_parse_push_frame:<aacparse0> error: No caps set The above failuer is due to check in function "gst_aac_parse_handle_frame" if (G_UNLIKELY (rate != aacparse->sample_rate || channels != aacparse->channels)) { ... } Root cause: Below private member variables were not reset properly aacparse->channels = 0; aacparse->sample_rate = 0;
Created attachment 352469 [details] [review] Patch to reuse aac parse Resetting aacparse private member variables
Thanks ! commit 810c0bb0845a4251bf6db341ee58f119c8129b89 Author: vijay <vijay.palaniswamy@in.bosch.com> Date: Wed May 24 11:33:05 2017 +0530 aacparse : Fix, Caps were not set while reusing aacparse While reusing aacparse caps were not set.This fix enables aacparse to reuse in same pipeline. https://bugzilla.gnome.org/show_bug.cgi?id=783027
Also picked into 1.12 branch.